--- a/src/pages/components/Header.css
+++ b/src/pages/components/Header.css
@@ -1,4 +1,4 @@
-div.Sidebar {
+header#main-header {
   color: #fff;
   width: 100%;
   height: 50px;
@@ -9,7 +9,7 @@ div.Sidebar {
   display: flex;
 }
 
-div input#Search {
+header#main-header .Search {
   padding-left: 5px;
   margin: 0 5px 0 50px;
   width: 400px;
@@ -18,25 +18,25 @@ div input#Search {
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 1);
 }
 
-div label {
+header#main-header .categorias {
   font-size: 12px;
 }
 
-div.Sidebar img#baseline_menu {
+header#main-header img#baseline_menu {
   height: 40px;
   width: 40px;
   margin-right: 20px;
   cursor: pointer;
 }
 
-div.Sidebar img#account_circle {
+header#main-header img#account_circle {
   height: 30px;
   width: 30px;
   margin-left: 15%;
   cursor: pointer;
 }
 
-div.Sidebar img#keyboard_bottom {
+header#main-header img#keyboard_bottom {
   height: 10px;
   width: 10px;
   margin-left: 2px;
