--- a/src/pages/SignUp/index.css
+++ b/src/pages/SignUp/index.css
@@ -22,8 +22,13 @@ div#box p.text1 {
   margin: 15px auto;
 }
 
-div#box input {
-  width: 80%;
+div#box form {
+  flex-direction: column;
+  display: flex;
+}
+
+div#box form input {
+  width: 300px;
   height: 40px;
   border-radius: 5px;
   border: 1px;
@@ -33,8 +38,8 @@ div#box input {
   padding-left: 5px;
 }
 
-div#box button {
-  width: 80%;
+div#box form button {
+  width: 300px;
   height: 40px;
   border-radius: 10px;
   border: none;
@@ -43,7 +48,7 @@ div#box button {
   font-size: 18px;
   transition: 0.5s;
 }
-div#box button:hover {
+form button:hover {
   cursor: pointer;
   background: #fff;
   color: #22a7f0;
@@ -79,40 +84,4 @@ div#box2 a {
 
 div#box2 a:hover {
   color: #000000;
-}
-
-div#label {
-  width: 80%;
-  display: flex;
-  justify-self: start;
-}
-
-div#label p {
-  font-size: 10px;
-  opacity: 0.5;
-  margin-left: 10px;
-}
-
-div#label2 {
-  width: 80%;
-  display: flex;
-  justify-self: start;
-}
-
-div#label2 p {
-  font-size: 10px;
-  opacity: 0.5;
-  margin-left: 10px;
-}
-
-div#label3 {
-  width: 80%;
-  display: flex;
-  justify-self: start;
-}
-
-div#label3 p {
-  font-size: 10px;
-  opacity: 0.5;
-  margin-left: 10px;
 }
