--- a/src/pages/SignUp/index.css
+++ b/src/pages/SignUp/index.css
@@ -1,34 +1,31 @@
-div#containerSign {
+div.content-signup {
   display: flex;
+  height: 100%;
   justify-content: center;
-  align-items: center;
 }
+
 div#box {
-  height: 600px;
+  height: 100%;
   width: 400px;
   background-color: #fff;
   flex-direction: column;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
-div#box h1 {
+h1.title {
   color: #22a7f0;
 }
 
-div#box p.text1 {
+p.text1 {
   font-size: 32px;
   margin: 15px auto;
 }
-
 div#box form {
   flex-direction: column;
   display: flex;
 }
 
 div#box form input {
-  width: 300px;
+  width: 350px;
   height: 40px;
   border-radius: 5px;
   border: 1px;
@@ -38,8 +35,8 @@ div#box form input {
   padding-left: 5px;
 }
 
-div#box form button {
-  width: 300px;
+div#box form button.btn {
+  width: 350px;
   height: 40px;
   border-radius: 10px;
   border: none;
@@ -48,7 +45,7 @@ div#box form button {
   font-size: 18px;
   transition: 0.5s;
 }
-form button:hover {
+div#box form button.btn:hover {
   cursor: pointer;
   background: #fff;
   color: #22a7f0;
