--- a/src/pages/editportfolio/index.css
+++ b/src/pages/editportfolio/index.css
@@ -5,7 +5,7 @@ div#top {
   justify-content: center;
 }
 
-article#info {
+form#info {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -70,4 +70,20 @@ div#text {
   width: 80%;
   justify-self: start;
   display: flex;
+}
+
+button.att {
+  width: 80%;
+  height: 40px;
+  border-radius: 10px;
+  border: none;
+  background: #22a7f0;
+  color: #fff;
+  font-size: 18px;
+  transition: 0.5s;
+}
+button.att:hover {
+  cursor: pointer;
+  background: #fff;
+  color: #22a7f0;
 }
