atualização do login e signup

--- a/src/pages/Login/index.css
+++ b/src/pages/Login/index.css
@@ -1,60 +1,57 @@
-div#containerlogin {
+.containerlogin {
+  height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
-div#box {
-  height: 600px;
+.boxlogin {
   width: 400px;
   background-color: #fff;
   flex-direction: column;
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
-div#box h1 {
+.boxlogin h1 {
   color: #22a7f0;
 }
 
-div#box p.text1 {
+.boxlogin p.title {
   font-size: 32px;
   margin: 15px auto;
 }
 
-div#box input {
+.boxlogin input {
   width: 80%;
-  height: 40px;
-  border-radius: 5px;
-  border: 1px;
-  border-style: solid;
-  border-color: gray;
+  height: 50px;
+  border-radius: 8px;
+  border: 1px solid #dcdce6;
   margin: 10px auto;
-  padding-left: 5px;
+  padding-left: 0 10px;
 }
 
-div#box button {
+.button {
   width: 80%;
-  height: 40px;
-  border-radius: 10px;
+  height: 60px;
+  border-radius: 8px;
   border: none;
   background: #22a7f0;
   color: #fff;
   font-size: 18px;
-  transition: 0.5s;
+  transition: filter 0.2s;
+  font-weight: 700;
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  line-height: 60px;
 }
-div#box button:hover {
+.button:hover {
   cursor: pointer;
-  background: #fff;
-  color: #22a7f0;
+  filter: brightness(90%);
 }
 
-div#box2 {
+.box2 {
   display: flex;
   flex-direction: row;
-}
-
-div#box2 {
   width: 80%;
   margin-top: 40px;
   border-top: solid 1px;
@@ -64,30 +61,31 @@ div#box2 {
   align-items: center;
 }
 
-div#box2 p.text2 {
+.box2 p.txt-criarconta {
   font-size: 18px;
   font-style: italic;
 }
 
-div#box2 a {
+.box2 a {
   margin: auto 5px;
   font-size: 18px;
   text-decoration: none;
   font-style: italic;
   color: #22a7f0;
+  transition: filter 0.2s;
 }
 
-div#box2 a:hover {
-  color: #000000;
+.box2 a:hover {
+  filter: brightness(80%);
 }
 
-div#label {
+.label {
   width: 80%;
   display: flex;
   justify-self: start;
 }
 
-div#label2 {
+.label2 {
   width: 80%;
   display: flex;
   justify-self: start;
