--- a/src/pages/SignUp/index.css
+++ b/src/pages/SignUp/index.css
@@ -1,14 +1,16 @@
-div.content-signup {
+.content-signup {
   display: flex;
   height: 100%;
   justify-content: center;
 }
 
-div#box {
+.boxsignup {
   height: 100%;
   width: 400px;
   background-color: #fff;
   flex-direction: column;
+  display: flex;
+  align-items: center;
 }
 
 h1.title {
@@ -19,44 +21,43 @@ p.text1 {
   font-size: 32px;
   margin: 15px auto;
 }
-div#box form {
+.boxsignup form {
   flex-direction: column;
   display: flex;
 }
 
-div#box form input {
+.boxsignup form input {
   width: 350px;
-  height: 40px;
-  border-radius: 5px;
-  border: 1px;
-  border-style: solid;
-  border-color: gray;
+  height: 50px;
+  border-radius: 8px;
+  border: 1px solid #dcdce6;
   margin: 10px auto;
-  padding-left: 5px;
+  padding-left: 0 10px;
 }
 
-div#box form button.btn {
-  width: 350px;
-  height: 40px;
-  border-radius: 10px;
+.btn {
+  width: 100%;
+  height: 60px;
+  border-radius: 8px;
   border: none;
   background: #22a7f0;
   color: #fff;
   font-size: 18px;
-  transition: 0.5s;
+  transition: filter 0.2s;
+  font-weight: 700;
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  line-height: 60px;
 }
-div#box form button.btn:hover {
+.btn:hover {
   cursor: pointer;
-  background: #fff;
-  color: #22a7f0;
+  filter: brightness(90%);
 }
 
-div#box2 {
+.box-conta {
   display: flex;
   flex-direction: row;
-}
-
-div#box2 {
   width: 80%;
   margin-top: 40px;
   border-top: solid 1px;
@@ -66,19 +67,20 @@ div#box2 {
   align-items: center;
 }
 
-div#box2 p.text2 {
+.box-conta p.text-conta {
   font-size: 18px;
   font-style: italic;
 }
 
-div#box2 a {
+.box-conta a {
   margin: auto 5px;
   font-size: 18px;
   text-decoration: none;
   font-style: italic;
   color: #22a7f0;
+  transition: filter 0.2s;
 }
 
-div#box2 a:hover {
-  color: #000000;
+.box-conta a:hover {
+  filter: brightness(80%);
 }
