--- a/src/pages/components/Header.css
+++ b/src/pages/components/Header.css
@@ -1,4 +1,4 @@
-header#main-header {
+.main-header {
   color: #fff;
   width: 100%;
   height: 50px;
@@ -9,37 +9,37 @@ header#main-header {
   display: flex;
 }
 
-header#main-header .Search {
-  padding-left: 5px;
-  margin: 0 5px 0 50px;
-  width: 400px;
-  height: 30px;
-  border: 0;
-  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 1);
-}
-
-header#main-header .categorias {
+.main-header .categorias {
   font-size: 12px;
 }
 
-header#main-header img#baseline_menu {
-  height: 40px;
-  width: 40px;
-  margin-right: 20px;
-  cursor: pointer;
-}
-
-header#main-header img#account_circle {
+.main-header .account_circle {
   height: 30px;
   width: 30px;
   margin-left: 15%;
   cursor: pointer;
 }
 
-header#main-header img#keyboard_bottom {
-  height: 10px;
-  width: 10px;
-  margin-left: 2px;
+.main-header .keyboard_bottom {
+  height: 15px;
+  width: 15px;
   cursor: pointer;
 }
 
+.title-services {
+  margin-right: 100px;
+}
+.navigation {
+  width: 400px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav {
+  text-decoration: none;
+  color: #fff;
+  transition: filter 0.2s;
+}
+.nav:hover {
+  filter: brightness(50%);
+}
