--- a/src/pages/Inicio/Main.css
+++ b/src/pages/Inicio/Main.css
@@ -81,3 +81,31 @@ li.serv-item header .user-info {
   justify-content: center;
   align-items: center;
 }
+
+/*BANNER*/
+.banner-user {
+  justify-content: center;
+  height: 300px;
+  background-color: #fff;
+}
+.banner-user-elem {
+  text-align: center;
+  color: #fff;
+  position: relative;
+  overflow: hidden;
+}
+.banner-user-elem .banner-user-title {
+  font-size: 32px;
+  top: 40%;
+}
+.banner-user-elem .banner-user-text {
+  top: 40%;
+}
+.banner-anim-elem .bg {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+}
