--- a/src/pages/components/Header.css
+++ b/src/pages/components/Header.css
@@ -1,45 +1,91 @@
-.main-header {
-  color: #fff;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.navbar {
   width: 100%;
   height: 50px;
-  background: #22a7f0;
-  box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.02);
+  color: #fff;
+  background-color: #22a7f0;
+  display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.navbar strong {
+  margin-left: 200px;
+  width: 150px;
+}
+
+.navbar a {
   display: flex;
-}
-
-.main-header .categorias {
-  font-size: 12px;
-}
-
-.main-header .account_circle {
-  height: 30px;
-  width: 30px;
-  margin-left: 15%;
-  cursor: pointer;
-}
-
-.main-header .keyboard_bottom {
-  height: 15px;
-  width: 15px;
-  cursor: pointer;
-}
-
-.title-services {
-  margin-right: 100px;
-}
-.navigation {
-  width: 400px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav {
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  width: 200px;
   text-decoration: none;
   color: #fff;
+  background-color: #22a7f0;
   transition: filter 0.2s;
 }
-.nav:hover {
-  filter: brightness(50%);
+.navbar a:hover {
+  cursor: pointer;
+  filter: brightness(90%);
+}
+
+.menu {
+  height: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+  box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.02);
+}
+
+.menu ul {
+  list-style: none;
+  position: relative;
+}
+.menu ul li {
+  width: 150px;
+  float: left;
+}
+
+.menu a {
+  padding: 15px;
+  display: block;
+  text-decoration: none;
+  text-align: center;
+  color: #fff;
+  background-color: #22a7f0;
+  transition: filter 0.2s;
+}
+.menu a:hover {
+  cursor: pointer;
+  filter: brightness(90%);
+}
+.menu ul ul {
+  position: absolute;
+  visibility: hidden;
+}
+
+.menu ul li:hover ul {
+  visibility: visible;
+}
+
+.menu ul ul li {
+  float: none;
+}
+.menu ul ul li a {
+  background-color: #fff;
+  color: #000;
+  transition: filter 0.2s;
+}
+.menu ul ul li a:hover {
+  filter: brightness(90%);
+}
+.menu ul li img {
+  margin-left: 75px;
+  transition: filter 0.2s;
+}
+.menu ul li img:hover {
+  filter: brightness(80%);
 }
